testsuite/tests/generic_interfaces/bad_return/array_content/test.out
== foo.lkt ==
foo.lkt:17:5: error: BarNode.prop returns Bool.array, which does not match return type of Interface.method: Array[Interface]
17 |     fun prop(): Array[Bool] implements Interface.method = [true]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


lkt_compile: Done
